--- a/reconstruction/RootStreamBuilder/CMakeLists.txt
+++ b/reconstruction/RootStreamBuilder/CMakeLists.txt
@@ -5,6 +5,7 @@ file(GLOB_RECURSE HEADERS src/RootStreamMaker.h )
 include_directories(${CMAKE_SOURCE_DIR} ${ROOT_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../events/CaloCluster)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../events/CaloCell)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../events/CaloHit)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../events/EventInfo)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../events/TruthParticle)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../events/CaloRings)
