--- a/reconstruction/CaloHitBuilder/CMakeLists.txt
+++ b/reconstruction/CaloHitBuilder/CMakeLists.txt
@@ -1,10 +1,10 @@
 
-file(GLOB SOURCES src/*.cxx src/helper/*.cxx )
+file(GLOB SOURCES src/*.cxx src/helper/*.cxx)
 file(GLOB_RECURSE HEADERS src/C*.h src/OptimalFilter.h src/ShoweShapes.h src/helper/*.h)
 
 include_directories(${CMAKE_SOURCE_DIR} ${ROOT_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR})
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../events/CaloCluster)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../events/CaloCell)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../events/CaloCluster)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../events/CaloHit)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../events/EventInfo)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../events/TruthParticle)
@@ -14,13 +14,13 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../core/G4Kernel)
 
 
 
-ROOT_GENERATE_DICTIONARY(CaloCellBuilderDict ${HEADERS} LINKDEF ${CMAKE_CURRENT_SOURCE_DIR}/src/LinkDef.h  MODULE CaloCellBuilder)
+ROOT_GENERATE_DICTIONARY(CaloHitBuilderDict ${HEADERS} LINKDEF ${CMAKE_CURRENT_SOURCE_DIR}/src/LinkDef.h  MODULE CaloHitBuilder)
 
-add_library(CaloCellBuilder  OBJECT ${SOURCES} CaloCellBuilderDict.cxx)
-install(FILES ${HEADERS}  DESTINATION CaloCellBuilder)
+add_library(CaloHitBuilder  OBJECT ${SOURCES} CaloHitBuilderDict.cxx)
+install(FILES ${HEADERS}  DESTINATION CaloHitBuilder)
 
 
-gaugi_install_python_modules( ${CMAKE_CURRENT_SOURCE_DIR}/python CaloCellBuilder)
+gaugi_install_python_modules( ${CMAKE_CURRENT_SOURCE_DIR}/python CaloHitBuilder)
 
 
 
