--- a/docker/base/Dockerfile
+++ b/docker/base/Dockerfile
@@ -1,18 +1,26 @@
-FROM ubuntu:18.04
+#FROM ubuntu:18.04
+#FROM ubuntu:20.04
+FROM tensorflow/tensorflow:2.3.2-gpu
 
-LABEL maintainer "Gabriel Gazola Milan <gabriel.gazola@poli.ufrj.br>"
+LABEL maintainer "Joao Victor Pinto <jodafons@cern.ch>"
 
 ENV LC_ALL C.UTF-8
 ENV LANG en_US.UTF-8
 ENV LANGUAGE en_US:en
 ENV TERM screen
+ENV TZ=America/New_York
+ENV DEBIAN_FRONTEND=noninteractive
+
 
 USER root
 SHELL [ "/bin/bash", "-c" ]
 RUN rm /bin/sh && ln -s /bin/bash /bin/sh
-RUN ls
 RUN apt-get update --fix-missing
-RUN apt-get install -y python3.7 python3-pip
+
+#RUN apt-get install -y python3.7 python3-pip
+#RUN apt-get install -y python3.9 python3-pip
+#RUN ln -sf /usr/bin/python3.9 /usr/bin/python
+
 RUN apt-get install -y git \
                        wget \
                        dpkg-dev \
@@ -33,25 +41,23 @@ RUN apt-get install -y git \
                        libxml2-dev \
                        libkrb5-dev \
                        libgsl0-dev \
-                       libqt4-dev \
                        libfftw3-dev \
                        libcfitsio-dev \
                        graphviz-dev \
                        libavahi-compat-libdnssd-dev \
                        libboost-all-dev \
                        vim \
-                       qt4-default \
                        librange-v3-dev \
                        libboost-python-dev
 
 
-RUN git clone https://github.com/amix/vimrc.git ${HOME}/.vim_runtime
-RUN cd ${HOME}/.vim_runtime/ && source install_awesome_vimrc.sh 
-RUN wget https://cmake.org/files/v3.17/cmake-3.17.2-Linux-x86_64.sh -P /usr/
-RUN chmod 755 /usr/cmake-3.17.2-Linux-x86_64.sh
-RUN cd /usr && ./cmake-3.17.2-Linux-x86_64.sh --skip-license
-
-RUN ln -sf /usr/bin/python3.6 /usr/bin/python
+# Installing cmake
+WORKDIR /usr
+RUN wget --progress=dot:giga https://cmake.org/files/v3.19/cmake-3.19.7-Linux-x86_64.sh -P /usr/
+RUN chmod 755 /usr/cmake-3.19.7-Linux-x86_64.sh
+RUN ./cmake-3.19.7-Linux-x86_64.sh --skip-license
+RUN ln -sf /usr/bin/python3 /usr/bin/python
+RUN apt-get update && apt-get install -y texlive-full
 
 
 # Install ROOT
@@ -67,7 +73,7 @@ ENV PYTHONPATH "/opt/root_cern/build/lib:$PYTHONPATH"
 RUN apt-get install -y libxerces-c-dev
 RUN ls -lisah
 RUN CPU_N=$(grep -c ^processor /proc/cpuinfo) && ls && cd /opt && git clone https://github.com/lorenzetti-hep/geant4.git && cd geant4 && mkdir buildthis && cd buildthis && cmake -DGEANT4_INSTALL_DATA=ON \
- -DGEANT4_BUILD_MULTITHREADED=ON -DGEANT4_USE_SYSTEM_ZLIB=ON -DGEANT4_USE_QT=ON -DGEANT4_USE_GDML=ON -DGEANT4_BUILD_MUONIC_ATOMS_IN_USE=ON .. && make -j$CPU_N && \
+ -DGEANT4_BUILD_MULTITHREADED=ON -DGEANT4_USE_SYSTEM_ZLIB=ON -DGEANT4_USE_QT=OFF -DGEANT4_USE_GDML=ON -DGEANT4_BUILD_MUONIC_ATOMS_IN_USE=ON .. && make -j$CPU_N && \
 cp ../scripts/geant4_10.5.1.sh geant4.sh && source geant4.sh
 
 
@@ -91,6 +97,7 @@ RUN apt install curl -y
 RUN CPU_N=$(grep -c ^processor /proc/cpuinfo) && cd /opt && curl -O http://fastjet.fr/repo/fastjet-3.3.3.tar.gz && tar zxvf fastjet-3.3.3.tar.gz && cd fastjet-3.3.3/ && ./configure && make -j$CPU_N && make install
 
 # Install pip packages
+RUN ls
 RUN pip3 install --no-cache-dir \
     gaugi \
     setuptools \
@@ -99,7 +106,10 @@ RUN pip3 install --no-cache-dir \
     sklearn \
     seaborn \
     jupyterlab \
-    tqdm
+    tqdm \
+    atlas-mpl-style \
+    twine
+
 
 # Install Lorenzetti!
 COPY setup_envs.sh /
