--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   build:
-    runs-on: self-runner
+    runs-on: self-hosted
     container:
       image: docker://lorenzetti/lorenzetti:latest
 
