--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,10 @@ jobs:
     runs-on: self-hosted
     container:
       image: docker://lorenzetti/lorenzetti:latest
+      volumes: 
+        - volume:/voume
 
     steps:
       - name: Compile
-        run: |
-              source /setup_envs.sh
+        run: source /setup_envs.sh
               
