--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,5 @@ jobs:
     steps:
       - name: Compile
         shell: bash
-        run: cd /volume && 
+        run: source /setup_envs.sh
               
