--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,5 @@ jobs:
     steps:
       - name: Compile
         shell: bash
-        run: source /setup_envs.sh && cd /volume && git clone https://github.com/lorenzetti-hep/lorenzetti.git && cd lorenzetti && mkdir build && cd build && cmake .. && make -j8 && cd .. && source setup_here.sh
+        run: source /setup_envs.sh && cd /volume && rm -rf lorenzetti && git clone https://github.com/lorenzetti-hep/lorenzetti.git && cd lorenzetti && mkdir build && cd build && cmake .. && make -j8 && cd .. && source setup_here.sh
               
