--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,4 +39,19 @@ jobs:
           cmake .. && make -j8
           cd .. && source setup.sh
 
+
+  main_generation:
+    runs-on: self-hosted
+    needs: workdir
+    container:
+      image: docker://lorenzetti/lorenzetti:latest
+      volumes: 
+        - volume:/volume
+      env: 
+        VOLUME: /volume
+    steps:
+      - name: Compile
+        shell: bash
+        run: |
+          ls $VOLUME
               
