--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,14 +9,14 @@ jobs:
     container:
       image: docker://lorenzetti/lorenzetti:latest
       volumes: 
-        - volume:/volume
+        - ${{ env.working-directory }}/volume:/volume
       env: 
         VOLUME: /volume
     steps:
       - name: Workdir
         shell: bash
-        working-directory: ${VOLUME}
         run: |
+          cd $VOLUME
           rm -rf *
           git clone https://github.com/lorenzetti-hep/lorenzetti.git
           source lorenzetti/tests/workdir.sh
@@ -29,7 +29,7 @@ jobs:
     container:
       image: docker://lorenzetti/lorenzetti:latest
       volumes: 
-        - volume:/volume
+        - ${{ env.working-directory }}/volume:/volume
       env: 
         VOLUME: /volume
     steps:
@@ -37,6 +37,7 @@ jobs:
         shell: bash
         working-directory: ${VOLUME}/lorenzetti
         run: |
+          cd $VOLUME
           ls -lisah
           source /setup_envs.sh
           mkdir build && cd build && cmake .. && make -j8
