--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,23 @@ jobs:
         shell: bash
         run: |
           ls -lisah
+          source /setup_envs.sh
           cd lorenzetti && mkdir build && cd build && cmake .. && make -j4 && cd ..
           source setup.sh
+          
+  main_generation:
+    runs-on: self-hosted
+    needs: build
+    container:
+      image: docker://lorenzetti/lorenzetti:latest
+    steps:
+      - name: Compile
+        shell: bash
+        run: |
+          ls -lisah
+          source /setup_envs.sh
+          mkdir main_generation && cd main_generation
+          prun_jobs.py -c "gen_zee.py --pileupAvg 0 --nov %NOV --eventNumber %OFFSET -o %OUT -s %SEED" -nt 1 --nov 10 --novPerJob 100 -o main.EVT.root -m
 
 
 
