--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,7 @@ jobs:
       - name: Generation
         shell: bash
         run: |
+          pwd
           export GIT_RUNNER_BASEPATH=$pwd
           export REPO_TESTS=$GIT_RUNNER_BASEPATH/lorenzetti/tests
           source /setup_envs.sh && cd lorenzetti && source setup.sh
