--- a/generator/evtgen/CMakeLists.txt
+++ b/generator/evtgen/CMakeLists.txt
@@ -26,14 +26,14 @@ gaugi_install_python_modules( ${CMAKE_CURRENT_SOURCE_DIR}/python evtgen)
 
 
 
-## Add executables from share folder
-#add_executable( gun.exe ${CMAKE_CURRENT_SOURCE_DIR}/share/gun.cxx)
-#target_link_libraries(gun.exe ${PYTHIA8_LIBRARIES} 
-#                                            ${CMAKE_DL_LIBS} 
-#                                            ${HEPMC_LIBRARIES} 
-#                                            ${FASTJET_LIBRARIES}
-#                                            ${ROOT_LIBRARIES} 
-#                                            ${ROOT_COMPONENT_LIBRARIES} )
+# Add executables from share folder
+add_executable( gun.exe ${CMAKE_CURRENT_SOURCE_DIR}/share/gun.cxx)
+target_link_libraries(gun.exe ${PYTHIA8_LIBRARIES} 
+                                            ${CMAKE_DL_LIBS} 
+                                            ${HEPMC_LIBRARIES} 
+                                            ${FASTJET_LIBRARIES}
+                                            ${ROOT_LIBRARIES} 
+                                            ${ROOT_COMPONENT_LIBRARIES} )
 
 
 
