--- a/reconstruction/CaloRingsBuilder/CMakeLists.txt
+++ b/reconstruction/CaloRingsBuilder/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 file(GLOB SOURCES src/*.cxx)
-file(GLOB_RECURSE HEADERS src/CaloRingerBuilder.h )
+file(GLOB_RECURSE HEADERS src/CaloRingsBuilder.h )
 
 include_directories(${CMAKE_SOURCE_DIR} ${ROOT_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../events/CaloCluster)
@@ -11,13 +11,13 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../core/G4Kernel)
 
 
 
-ROOT_GENERATE_DICTIONARY(CaloRingerBuilderDict ${HEADERS} LINKDEF ${CMAKE_CURRENT_SOURCE_DIR}/src/LinkDef.h  MODULE CaloRingerBuilder)
+ROOT_GENERATE_DICTIONARY(CaloRingsBuilderDict ${HEADERS} LINKDEF ${CMAKE_CURRENT_SOURCE_DIR}/src/LinkDef.h  MODULE CaloRingsBuilder)
                                       
-add_library(CaloRingerBuilder  OBJECT ${SOURCES} CaloRingerBuilderDict.cxx)
-install(FILES ${HEADERS}  DESTINATION CaloRingerBuilder)
+add_library(CaloRingsBuilder  OBJECT ${SOURCES} CaloRingsBuilderDict.cxx)
+install(FILES ${HEADERS}  DESTINATION CaloRingsBuilder)
 
 
-gaugi_install_python_modules( ${CMAKE_CURRENT_SOURCE_DIR}/python CaloRingerBuilder)
+gaugi_install_python_modules( ${CMAKE_CURRENT_SOURCE_DIR}/python CaloRingsBuilder)
 
 
 
