--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,7 +8,6 @@ ENV LANGUAGE en_US:en
 ENV TERM screen
 ENV TZ=America/New_York
 ENV DEBIAN_FRONTEND=noninteractive
-ENV CPU_N=$(grep -c ^processor /proc/cpuinfo)
 
 # update all palsckages
 RUN apt-get update -y --fix-missing
@@ -62,7 +61,7 @@ WORKDIR /physics/root
 
 # install ROOT
 RUN git clone https://github.com/root-project/root.git && cd root && git checkout v6-28-02
-RUN mkdir build && cd build && cmake  -Dpython_version=3 -Dxrootd=OFF -Dbuiltin_xrootd=OFF ../root && make -j$CPU_N
+RUN mkdir build && cd build && cmake  -Dpython_version=3 -Dxrootd=OFF -Dbuiltin_xrootd=OFF ../root && make -j$(nproc)
 ENV ROOTSYS "/physics/root/build/"
 ENV PATH "$ROOTSYS/bin:$PATH"
 ENV LD_LIBRARY_PATH "$ROOTSYS/lib:$LD_LIBRARY_PATH"
@@ -74,37 +73,30 @@ WORKDIR /physics/geant
 RUN git clone https://github.com/lorenzetti-hep/geant4.git
 RUN mkdir build && cd build && cmake -DGEANT4_INSTALL_DATA=ON \
 -DGEANT4_BUILD_MULTITHREADED=ON -DGEANT4_USE_SYSTEM_ZLIB=ON DGEANT4_USE_OPENGL_X11=ON \
--DGEANT4_USE_QT=ON -DGEANT4_USE_GDML=ON -DGEANT4_BUILD_MUONIC_ATOMS_IN_USE=ON ../geant4 && make -j$CPU_N
+-DGEANT4_USE_QT=ON -DGEANT4_USE_GDML=ON -DGEANT4_BUILD_MUONIC_ATOMS_IN_USE=ON ../geant4 && make -j$(nproc)
 RUN cd build && cp ../geant4/scripts/geant4_10.5.1.sh geant4.sh
 
 
 # Install Pythia8
 RUN apt-get install -u 
 WORKDIR /physics
-RUN git clone https://github.com/lorenzetti-hep/pythia8.git && cd pythia8 && ./configure --with-python-config=python3-config && make -j$CPU_N
+RUN git clone https://github.com/lorenzetti-hep/pythia8.git && cd pythia8 && ./configure --with-python-config=python3-config && make -j$(nproc)
 
 # Install FastJet
-RUN curl -O http://fastjet.fr/repo/fastjet-3.3.3.tar.gz && tar zxvf fastjet-3.3.3.tar.gz && cd fastjet-3.3.3/ && ./configure && make -j$CPU_N && make install
+RUN curl -O http://fastjet.fr/repo/fastjet-3.3.3.tar.gz && tar zxvf fastjet-3.3.3.tar.gz && cd fastjet-3.3.3/ && ./configure && make -j$(nproc) && make install
 
 
 # Install HEPMC
 WORKDIR /physics/hepmc
 RUN git clone https://github.com/lorenzetti-hep/hepmc3.git && cd hepmc3 && git checkout 3.2.5 
-RUN mkdir build && cd build && cmake -DHEPMC3_ENABLE_ROOTIO=ON -DHEPMC3_INSTALL_INTERFACES=ON -DHEPMC3_ENABLE_PROTOBUFIO=ON ../hepmc3 && make -j$CPU_N && make install
+RUN mkdir build && cd build && cmake -DHEPMC3_ENABLE_ROOTIO=ON -DHEPMC3_INSTALL_INTERFACES=ON -DHEPMC3_ENABLE_PROTOBUFIO=ON ../hepmc3 && make -j$(nproc) && make install
 
 
 # Install pip packages
 RUN pip install --no-cache-dir setuptools pandas sklearn seaborn jupyterlab tqdm atlas-mpl-style twine pyhepmc colorama
 
 
-#
 # setup all environments before start bash terminal
-#
 COPY setup_envs.sh /
 RUN chmod 774 /setup_envs.sh
-WORKDIR /physics
-RUN git clone https://github.com/lorenzetti-hep/lorenzetti 
-
-WORKDIR /physics/lorenzetti
-#RUN . /setup_envs.sh
-#RUN mkdir build && cd build && cmake .. && make -jCPU_N
+WORKDIR /home
