--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -94,8 +94,8 @@ RUN mkdir build && cd build && cmake -DHEPMC3_ENABLE_ROOTIO=ON -DHEPMC3_INSTALL_
 
 
 # Install pip packages
-RUN pip install --no-cache-dir setuptools pandas sklearn seaborn jupyterlab tqdm atlas-mpl-style twine pyhepmc colorama
-
+RUN pip3 install --no-cache-dir setuptools pandas sklearn seaborn jupyterlab tqdm atlas-mpl-style twine pyhepmc colorama
+RUN apt-get install -y xorg
 
 # setup all environments before start bash terminal
 COPY setup_envs.sh /
