--- a/docker/Makefile
+++ b/docker/Makefile
@@ -8,7 +8,7 @@ push:
 	docker push lorenzetti/lorenzetti:latest
 	docker push lorenzetti/lorenzetti:base
 run:
-	docker run --network host -v ${PWD}:${HOME} -it lorenzetti/lorenzetti:base
+	xhost + && docker run -e DISPLAY=$DISPLAY -v ${HOME}:${HOME} -v /tmp/.X11-unix:/tmp/.X11-unix -v $XAUTHORITY:/tmp/.XAuthority -e XAUTHORITY=/tmp/.XAuthority  -it lorenzetti/lorenzetti:latest
 clean:
 	docker system prune -a
 pull:
