update somethings into the geometry settings.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,7 @@ add_subdirectory( core/G4Kernel )
 # event packages
 add_subdirectory( events/CaloHit )
 add_subdirectory( events/CaloCell )
+add_subdirectory( events/SpacePoint )
 add_subdirectory( events/CaloCluster )
 add_subdirectory( events/EventInfo )
 add_subdirectory( events/TruthParticle )
@@ -75,6 +76,7 @@ add_subdirectory( reconstruction/calorimeter/CaloCellBuilder )
 add_subdirectory( reconstruction/calorimeter/CaloClusterBuilder )
 add_subdirectory( reconstruction/calorimeter/CaloRingsBuilder )
 add_subdirectory( reconstruction/io/RootStreamBuilder )
+add_subdirectory( reconstruction/tracking/SpacePointBuilder )
 
 # detector definitions
 add_subdirectory( geometry/ATLAS )
