--- a/core/G4Kernel/CMakeLists.txt
+++ b/core/G4Kernel/CMakeLists.txt
@@ -9,6 +9,7 @@ include_directories(${X11_INCLUDE_DIR})
 include_directories(${CMAKE_SOURCE_DIR} ${ROOT_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../GaugiKernel)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../events/TruthParticle)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../events/Seed)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../events/EventInfo)
 
 ROOT_GENERATE_DICTIONARY(G4KernelDict ${HEADERS} LINKDEF ${CMAKE_CURRENT_SOURCE_DIR}/src/LinkDef.h  MODULE G4Kernel)
