--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,15 +66,15 @@ add_subdirectory( core/G4Kernel )
 add_subdirectory( events/CaloHit )
 add_subdirectory( events/CaloCell )
 add_subdirectory( events/SpacePoint )
-#add_subdirectory( events/CaloCluster )
+add_subdirectory( events/CaloCluster )
 add_subdirectory( events/EventInfo )
 add_subdirectory( events/TruthParticle )
-#add_subdirectory( events/CaloRings )
+add_subdirectory( events/CaloRings )
 
 # reconstruction package
 add_subdirectory( reconstruction/calorimeter/CaloCellBuilder )
-#add_subdirectory( reconstruction/calorimeter/CaloClusterBuilder )
-#add_subdirectory( reconstruction/calorimeter/CaloRingsBuilder )
+add_subdirectory( reconstruction/calorimeter/CaloClusterBuilder )
+add_subdirectory( reconstruction/calorimeter/CaloRingsBuilder )
 add_subdirectory( reconstruction/io/RootStreamBuilder )
 
 # detector definitions
@@ -95,14 +95,14 @@ add_library(lorenzetti SHARED
   $<TARGET_OBJECTS:G4Kernel>
   $<TARGET_OBJECTS:CaloHit>
   $<TARGET_OBJECTS:CaloCell>
-  #$<TARGET_OBJECTS:CaloCluster>
+  $<TARGET_OBJECTS:CaloCluster>
   $<TARGET_OBJECTS:EventInfo>
   $<TARGET_OBJECTS:TruthParticle>
-  #$<TARGET_OBJECTS:CaloRings>
+  $<TARGET_OBJECTS:CaloRings>
   $<TARGET_OBJECTS:SpacePoint>
   $<TARGET_OBJECTS:CaloCellBuilder>
-  #$<TARGET_OBJECTS:CaloClusterBuilder>
-  #$<TARGET_OBJECTS:CaloRingsBuilder>
+  $<TARGET_OBJECTS:CaloClusterBuilder>
+  $<TARGET_OBJECTS:CaloRingsBuilder>
   $<TARGET_OBJECTS:RootStreamBuilder>
   $<TARGET_OBJECTS:GenKernel>
   $<TARGET_OBJECTS:filters>
