start cutbased hypo implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,6 +76,7 @@ add_subdirectory( reconstruction/calorimeter/CaloCellBuilder )
 add_subdirectory( reconstruction/calorimeter/CaloClusterBuilder )
 add_subdirectory( reconstruction/calorimeter/CaloRingsBuilder )
 add_subdirectory( reconstruction/io/RootStreamBuilder )
+add_subdirectory( physics/egamma/CaloCutBasedHypo )
 
 # detector definitions
 add_subdirectory( geometry/ATLAS )
@@ -104,6 +105,7 @@ add_library(lorenzetti SHARED
   $<TARGET_OBJECTS:CaloClusterBuilder>
   $<TARGET_OBJECTS:CaloRingsBuilder>
   $<TARGET_OBJECTS:RootStreamBuilder>
+  $<TARGET_OBJECTS:CaloCutBasedHypo>
   $<TARGET_OBJECTS:GenKernel>
   $<TARGET_OBJECTS:filters>
   $<TARGET_OBJECTS:evtgen>
